--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
           <br>
           Master of Science: Computer Science
           <time>expected May 2017</time>
+          <br>
+          <em>GPA: 3.90</em>
           <br><br>
           Bachelor of Science: Computer Science
           <time>2015</time>
@@ -46,13 +48,12 @@
           <li>Python</li>
           <li>Java</li>
 
-          <li>JavaScript</li>
-
-          <li>HTML</li>
-          <li>CSS</li>
-
           <li>C</li>
           <li>C++</li>
+
+          <li>JavaScript</li>
+          <li>HTML</li>
+          <li>CSS</li>
 
           <li>Haskell</li>
           <li>Rust</li>
@@ -65,6 +66,7 @@
           <li>Git</li>
           <li>Linux/UNIX</li>
           <li>Shell</li>
+          <li>Vim</li>
 
           <li>Make</li>
           <li>GDB</li>
@@ -84,15 +86,15 @@
           <time>present</time>
         </p>
         <ul>
-          <li>Create, design, and implement my own programming language with a colleague</li>
+          <li>Design and implement a new programming language with a colleague</li>
           <li>Write lexer, parser, and compiler in Python to translate Mask source code to LLVM IR</li>
         </ul>
 
         <p>
-          <a href="https://github.com/philipdexter/vx">
+          <a href="https://github.com/scizzorz/vx">
             <strong>vx</strong>
             &#8210; text editor
-            <small>&#8210; github.com/philipdexter/vx</small>
+            <small>&#8210; github.com/scizzorz/vx</small>
           </a>
           <time>present</time>
         </p>
@@ -102,11 +104,14 @@
         </ul>
 
         <p>
-          <strong>Automated home assistant</strong>
+          <a href="https://github.com/scizzorz/voice-automation">
+            <strong>Automated home assistant</strong>
+            <small>&#8210; github.com/scizzorz/voice-automation</small>
+          </a>
           <time>2015</time>
         </p>
         <ul>
-          <li>Uses an always-on microphone, Leap Motion, and Android phone sensors to accept voice, gesture, and automated commands</li>
+          <li>Uses a microphone, Leap Motion, and Android device to accept voice and gesture commands</li>
           <li>Supports multimedia controls, computer interaction, and Philips Hue light controls</li>
         </ul>
 
@@ -119,6 +124,7 @@
         </p>
         <ul>
           <li>Experiment and implement various small projects to explore different areas of computing</li>
+          <li>Includes projects for Arduino, Android, Leap Motion, web development, and automation</li>
         </ul>
 
       </div>
@@ -126,12 +132,13 @@
       <h2><span>Experience</span></h2>
       <div id="experience">
         <p>
-          <strong>Graduate Teaching Assistant</strong>
-          &#8210; Intro to OOP; Intro to Design Patterns
-          <time>2015</time>
+          <strong>Teaching Assistant</strong>
+          &#8210; OOP; Data Structures / Algorithms; Design Patterns
+          <time>2013 - 2016</time>
         </p>
         <ul>
-          <li>Taught and assisted students to further their understanding of course concepts</li>
+          <li>Supervise, assiste, and educate students during labs and office hours</li>
+          <li>Help course instructor design curriculum, assignments, and exams</li>
         </ul>
 
         <p>
@@ -145,24 +152,14 @@
         </ul>
 
         <p>
-          <strong>Undergraduate Course Assistant</strong>
-          &#8210; Data Structures / Algorithms; Intro to OOP
-          <time>2013 - 2015</time>
-        </p>
-        <ul>
-          <li>Supervised, assisted, and educated students during labs and office hours</li>
-          <li>Worked closely with course instructor to develop automated grading programs</li>
-        </ul>
-
-        <p>
           <strong>NSF REU / Research Assistant</strong>
           &#8210; MapReduce and Distributed Systems
           <time>2013 - 2015</time>
         </p>
         <ul>
           <li>Collaborated to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
-          <li>Researched new techniques for using SSDs during big data processing</li>
-          <li>Explored new methods to simplify big data processing and analysis for scientists</li>
+          <!--<li>Researched new techniques for using SSDs during big data processing</li>
+          <li>Explored new methods to simplify big data processing and analysis for scientists</li>-->
         </ul>
 
         <p>
