--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
         <p>
           <strong>Teaching Assistant</strong>
           &#8210; OOP; Data Structures / Algorithms; Design Patterns
-          <time>2013 - 2016</time>
+          <time>2013 - present</time>
         </p>
         <ul>
-          <li>Supervise, assiste, and educate students during labs and office hours</li>
+          <li>Supervise, assist, and educate students during labs and office hours</li>
           <li>Help course instructor design curriculum, assignments, and exams</li>
         </ul>
 
