Small additions to background

--- a/background.html
+++ b/background.html
@@ -41,7 +41,7 @@
         </ul>
       </li>
       <li>
-        <strong>Supercomputing '13, PyCon '14, PyCon '15</strong>
+        <strong>Supercomputing '13 (sponsored), PyCon '14, PyCon '15</strong>
         <ul>
           <li>Got to meet a lot of great community members</li>
           <li>Had lunch with Guido van Rossum!</li>
@@ -54,13 +54,13 @@
         </ul>
       </li>
       <li>
-        <strong>Summer working on a MapReduce implementation</strong>
+        <strong>Summer working on a MapReduce implementation (NSF REU)</strong>
         <ul>
           <li>Familiarized myself with distributed systems fundamentals</li>
         </ul>
       </li>
       <li>
-        <strong>Summer working on scheduling scientific experiments</strong>
+        <strong>Summer working on scheduling scientific experiments (GSoC)</strong>
         <ul>
           <li>Familiarized myself with scientific applications of dist. sys.</li>
         </ul>
@@ -89,7 +89,7 @@
       <li>
         <strong>Woodworking</strong>
         <ul>
-          <li>Desks, trinket boxes, tables, chess set</li>
+          <li>Desks, trinket boxes, tables, chess set, digital clocks</li>
         </ul>
       </li>
     </ul>
