Add link to Guido selfie

--- a/background.html
+++ b/background.html
@@ -44,7 +44,7 @@
         <strong>Supercomputing '13 (sponsored), PyCon '14, PyCon '15</strong>
         <ul>
           <li>Got to meet a lot of great community members</li>
-          <li>Had lunch with Guido van Rossum!</li>
+          <li>Had lunch with <a href="http://soofw.com/up/guido.jpg">Guido van Rossum</a>!</li>
         </ul>
       </li>
       <li>
