Add Yik Yak simulator

--- a/background.html
+++ b/background.html
@@ -38,6 +38,7 @@
           <li>Comfortable with Haskell, Rust</li>
           <li>Some experience with Nim, Julia, Prolog, Scheme, Erlang</li>
           <li>Pet projects include a text editor, Pokemon solver, and programming language</li>
+          <li>Recently working on a Yik Yak simulator using neural networks</li>
         </ul>
       </li>
       <li>
