Unabbreviate "distributed systems"

--- a/background.html
+++ b/background.html
@@ -63,7 +63,7 @@
       <li>
         <strong>Summer working on scheduling scientific experiments (GSoC)</strong>
         <ul>
-          <li>Familiarized myself with scientific applications of dist. sys.</li>
+          <li>Familiarized myself with scientific applications of distributed systems</li>
         </ul>
       </li>
     </ul>
