Add Corning, Inc internship

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <ul>
           <li class="strong">Tools</li>
 
-          <li>Git</li>
-          <li>Linux/UNIX</li>
-          <li>Shell</li>
           <li>Vim</li>
+          <li>Git</li>
+          <li>Linux/Unix</li>
+          <li>Shell</li>
 
           <li>Make</li>
           <li>GDB</li>
@@ -81,13 +81,16 @@
       <h2><span>Projects</span></h2>
       <div id="projects">
         <p>
-          <strong>Mask</strong>
-          &#8210; programming language
+          <a href="https://github.com/scizzorz/rain">
+            <strong>Rain</strong>
+            &#8210; programming language
+            <small>&#8210; github.com/scizzorz/rain</small>
+          </a>
           <time>present</time>
         </p>
         <ul>
-          <li>Design and implement a new programming language with a colleague</li>
-          <li>Write lexer, parser, and compiler in Python to translate Mask source code to LLVM IR</li>
+          <li>Design and implement a new programming language</li>
+          <li>Write lexer, parser, and compiler in Python to translate Rain source code to LLVM IR</li>
         </ul>
 
         <p>
@@ -96,23 +99,11 @@
             &#8210; text editor
             <small>&#8210; github.com/scizzorz/vx</small>
           </a>
-          <time>present</time>
+          <time>2016</time>
         </p>
         <ul>
           <li>Conceived original idea for the design of a terminal-based text editor</li>
           <li>Contribute to the API structure and development</li>
-        </ul>
-
-        <p>
-          <a href="https://github.com/scizzorz/voice-automation">
-            <strong>Automated home assistant</strong>
-            <small>&#8210; github.com/scizzorz/voice-automation</small>
-          </a>
-          <time>2015</time>
-        </p>
-        <ul>
-          <li>Uses a microphone, Leap Motion, and Android device to accept voice and gesture commands</li>
-          <li>Supports multimedia controls, computer interaction, and Philips Hue light controls</li>
         </ul>
 
         <p>
@@ -132,8 +123,19 @@
       <h2><span>Experience</span></h2>
       <div id="experience">
         <p>
+          <strong>Software Engineer Intern</strong>
+          &#8210; Corning, Inc.
+          <time>2016 - present</time>
+        </p>
+        <ul>
+          <li>Develop in-house web applications to assist engineers</li>
+          <li>Create and organize data storage / management solutions for research teams</li>
+          <li>Experiment with emerging technologies for distributed computing and big data management</li>
+        </ul>
+
+        <p>
           <strong>Teaching Assistant</strong>
-          &#8210; OOP; Data Structures / Algorithms; Design Patterns
+          &#8210; Data Structures; Design Patterns; Programming Languages
           <time>2013 - present</time>
         </p>
         <ul>
@@ -167,13 +169,6 @@
         </p>
         <ul>
           <li>
-            <a href="http://pipsboutique.com">
-              Pip's Boutique
-              <small>&#8210; pipsboutique.com</small>
-            </a>
-            <time>2013 - present</time>
-          </li>
-          <li>
             <a href="http://underwatertigermusic.com">
               Underwater Tiger
               <small>&#8210; underwatertigermusic.com</small>
@@ -186,6 +181,13 @@
               <small>&#8210; marketstreetcoffeeandtea.com</small>
             </a>
             <time>2005 - present</time>
+          </li>
+          <li>
+            <a href="http://pipsboutique.com">
+              Pip's Boutique
+              <small>&#8210; pipsboutique.com</small>
+            </a>
+            <time>2013 - 2017</time>
           </li>
           <li>
             <a href="http://marketstreetapothecary.com">
