Update for 2017 junk

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <div id="container">
       <h1 id="name">John R. Weachock</h1>
       <p id="contact">
-        257 Prospect Hill Road, Horseheads, NY 14845
+        317 East 3rd Street, Corning, NY 14830
         <br>
         <a href="jweachock@gmail.com">jweachock@gmail.com</a>
         &#8210;
-        607.742.8358
+        607.323.1269
         <br>
-        <a href="http://soofw.com">soofw.com</a>
-        &#8210;
         <a href="https://github.com/scizzorz">github.com/scizzorz</a>
       </p>
 
@@ -27,16 +25,12 @@
           <strong>Binghamton University</strong>, State University of New York
           <br>
           Master of Science: Computer Science
-          <time>expected May 2017</time>
+          <time>2017</time>
+
           <br>
-          <em>GPA: 3.90</em>
-          <br><br>
           Bachelor of Science: Computer Science
           <time>2015</time>
           <br>
-          <em>Major: 3.79, cumulative: 3.62; Dean's List: five semesters</em>
-          <br>
-          <em>Upsilon Pi Epsilon Honor Society, Phi Eta Sigma Honor Society</em>
         </p>
       </div>
 
@@ -47,6 +41,7 @@
 
           <li>Python</li>
           <li>Java</li>
+          <li>Lua</li>
 
           <li>C</li>
           <li>C++</li>
@@ -58,7 +53,6 @@
           <li>Haskell</li>
           <li>Rust</li>
           <li>Nim</li>
-          <li>Julia</li>
         </ul>
         <ul>
           <li class="strong">Tools</li>
@@ -99,7 +93,7 @@
             &#8210; text editor
             <small>&#8210; github.com/scizzorz/vx</small>
           </a>
-          <time>2016</time>
+          <time>present</time>
         </p>
         <ul>
           <li>Conceived original idea for the design of a terminal-based text editor</li>
@@ -123,15 +117,24 @@
       <h2><span>Experience</span></h2>
       <div id="experience">
         <p>
+          <strong>Software Engineer</strong>
+          &#8210; Corning Incorporated
+          <time>present</time>
+        </p>
+
+        <p>
           <strong>Software Engineer Intern</strong>
           &#8210; Corning, Inc.
-          <time>2016 - present</time>
+          <time>2016</time>
         </p>
+
+        <!--
         <ul>
           <li>Develop in-house web applications to assist engineers</li>
           <li>Create and organize data storage / management solutions for research teams</li>
           <li>Experiment with emerging technologies for distributed computing and big data management</li>
         </ul>
+        -->
 
         <p>
           <strong>Teaching Assistant</strong>
@@ -139,30 +142,45 @@
           <time>2013 - present</time>
         </p>
         <ul>
+          <li>Data Structures &amp; Algorithms</li>
+          <li>Design Patterns</li>
+          <li>Programming Languages</li>
+          <li>Object Oriented Programming</li>
+        </ul>
+
+        <!--
+        <ul>
           <li>Supervise, assist, and educate students during labs and office hours</li>
           <li>Help course instructor design curriculum, assignments, and exams</li>
         </ul>
+        -->
 
         <p>
           <strong>Google Summer of Code</strong>
           &#8210; Apache Airavata
           <time>2015</time>
         </p>
+
+        <!--
         <ul>
           <li>Worked remotely with a team to design a prediction system to estimate task duration</li>
           <li>Used machine learning and historic execution data to provide scientists with information about tasks</li>
         </ul>
+        -->
 
         <p>
           <strong>NSF REU / Research Assistant</strong>
           &#8210; MapReduce and Distributed Systems
           <time>2013 - 2015</time>
         </p>
+
+        <!--
         <ul>
           <li>Collaborated to enhance a custom MapReduce implementation, experiment on several HPC research clusters, and experience the challenges and rewards of big data computing</li>
-          <!--<li>Researched new techniques for using SSDs during big data processing</li>
-          <li>Explored new methods to simplify big data processing and analysis for scientists</li>-->
+          <li>Researched new techniques for using SSDs during big data processing</li>
+          <li>Explored new methods to simplify big data processing and analysis for scientists</li>
         </ul>
+        -->
 
         <p>
           <strong>Web Development</strong>
