Drop middle initial

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>John R. Weachock</title>
+    <title>John Weachock</title>
     <link rel="stylesheet" href="/resume/fonts.css" type="text/css"/>
     <link rel="stylesheet" href="/resume/main.css" type="text/css"/>
   </head>
   <body>
     <div id="container">
-      <h1 id="name">John R. Weachock</h1>
+      <h1 id="name">John Weachock</h1>
       <p id="contact">
         317 East 3rd Street, Corning, NY 14830
         <br>
