Fix a few mistakes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p>
           <strong>Software Engineer Intern</strong>
           &#8210; Corning, Inc.
-          <time>2016</time>
+          <time>2016 - 2017</time>
         </p>
 
         <!--
@@ -138,8 +138,8 @@
 
         <p>
           <strong>Teaching Assistant</strong>
-          &#8210; Data Structures; Design Patterns; Programming Languages
-          <time>2013 - present</time>
+          &#8210; Binghamton University
+          <time>2013 - 2017</time>
         </p>
         <ul>
           <li>Data Structures &amp; Algorithms</li>
