--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <p>
           <strong>Software Engineer Intern</strong>
-          &#8210; Corning, Inc.
+          &#8210; Corning Incorporated
           <time>2016 - 2017</time>
         </p>
 
