Oh god it's 2018

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p>
           <strong>Software Engineer</strong>
           &#8210; Corning Incorporated
-          <time>present</time>
+          <time>2017 - present</time>
         </p>
 
         <p>
