Update or something

--- a/index.html
+++ b/index.html
@@ -37,54 +37,91 @@
       <h2><span>Skills</span></h2>
       <div id="skills">
         <ul>
+          <li class="strong">Interests</li>
+
+          <li>Programming Languages</li>
+          <li>Woodworking</li>
+          <li>Game Design</li>
+          <li>Open-source Software</li>
+          <li>Data Transformation</li>
+          <li>Keyboards</li>
+          <li>Automation</li>
+        </ul>
+
+        <ul>
           <li class="strong">Languages</li>
 
+          <!-- top tier -->
           <li>Python</li>
-          <li>Java</li>
+
+          <!-- very familiar -->
+          <li>Rust</li>
           <li>Lua</li>
 
-          <li>C</li>
-          <li>C++</li>
-
+          <!-- pretty good at this stuff, but I'm not up-to-date with the trendy tooling / frameworks. -->
           <li>JavaScript</li>
           <li>HTML</li>
           <li>CSS</li>
 
+          <!-- familiar enough to get stuff done, but I don't wanna do it ever again -->
+          <li>Java</li>
+          <li>C</li>
+          <li>C++</li>
+
+          <!-- I'm familiar enough with these to pick something up, but by no means an expert -->
+          <li>C#</li>
           <li>Haskell</li>
-          <li>Rust</li>
+          <li>Julia</li>
+          <li>Go</li>
           <li>Nim</li>
         </ul>
+
         <ul>
           <li class="strong">Tools</li>
+          <!-- what the heck even is a "tool"? -->
 
+          <!-- extremely familiar with all of these -->
+          <li>Linux</li>
           <li>Vim</li>
           <li>Git</li>
-          <li>Linux/Unix</li>
           <li>Shell</li>
 
-          <li>Make</li>
-          <li>GDB</li>
-
-          <li>JSON</li>
+          <!-- not great at SQL syntax, but I understand the concepts and have done plenty of DB work. -->
           <li>SQL</li>
-          <li>XML</li>
-          <li>YAML</li>
+          <li>NoSQL</li>
+          <li>Web APIs</li>
+          <li>Redis</li>
+          <li>Docker</li>
+          <li>CI/CD</li>
         </ul>
       </div>
 
       <h2><span>Projects</span></h2>
       <div id="projects">
         <p>
-          <a href="https://github.com/scizzorz/rain">
-            <strong>Rain</strong>
+          <a href="https://github.com/scizzorz/mask">
+            <strong>Mask</strong>
             &#8210; programming language
-            <small>&#8210; github.com/scizzorz/rain</small>
+            <small>&#8210; github.com/scizzorz/mask</small>
           </a>
           <time>present</time>
         </p>
         <ul>
           <li>Design and implement a new programming language</li>
-          <li>Write lexer, parser, and compiler in Python to translate Rain source code to LLVM IR</li>
+          <li>Write source-to-bytecode compiler and bytecode interpreter in Rust</li>
+        </ul>
+
+        <p>
+          <a href="https://github.com/scizzorz/slag">
+            <strong>slag</strong>
+            &#8210; microblog
+            <small>&#8210; github.com/scizzorz/slag</small>
+          </a>
+          <time>2018</time>
+        </p>
+        <ul>
+          <li>Implemented a static site generator for a microblog</li>
+          <li>Slag uses commits in Git repositories as the post contents</li>
         </ul>
 
         <p>
@@ -93,11 +130,23 @@
             &#8210; text editor
             <small>&#8210; github.com/scizzorz/vx</small>
           </a>
-          <time>present</time>
+          <time>2017</time>
         </p>
         <ul>
           <li>Conceived original idea for the design of a terminal-based text editor</li>
-          <li>Contribute to the API structure and development</li>
+          <li>Contributed to the API structure and development</li>
+        </ul>
+
+        <p>
+          <span>
+            <strong>Barduino</strong>
+            &#8210; robotic bartender
+          </span>
+          <time>2017</time>
+        </p>
+        <ul>
+          <li>Designed and assembled a smart bar controlled via Raspberry Pi + Arduino</li>
+          <li>Accessed via web app with list of available drink recipes</li>
         </ul>
 
         <p>
@@ -105,11 +154,11 @@
             <strong>Other</strong>
             <small>&#8210; github.com/scizzorz</small>
           </a>
-          <time>2012 - 2015</time>
+          <time>2012 - 2018</time>
         </p>
         <ul>
-          <li>Experiment and implement various small projects to explore different areas of computing</li>
-          <li>Includes projects for Arduino, Android, Leap Motion, web development, and automation</li>
+          <li>Various projects to explore different areas of computing</li>
+          <li>Includes Arduino, Android, Leap Motion, web development, home automation, LLVM, and containers</li>
         </ul>
 
       </div>
