Cut some languages for space

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
           <li>JavaScript</li>
           <li>HTML</li>
           <li>CSS</li>
+          <!-- written very small amounts
+          <li>TypeScript / CoffeeScript</li>
+          <li>SCSS / SASS / LESS</li>
+          -->
 
           <!-- familiar enough to get stuff done, but I don't wanna do it ever again -->
           <li>Java</li>
@@ -70,10 +74,19 @@
 
           <!-- I'm familiar enough with these to pick something up, but by no means an expert -->
           <li>C#</li>
-          <li>Haskell</li>
           <li>Julia</li>
           <li>Go</li>
+
+          <!-- ran outta space
+          <li>Haskell</li>
           <li>Nim</li>
+          -->
+
+          <!-- read some of the language spec / guide, but haven't written any real code
+          <li>Swift</li>
+          <li>Kotlin</li>
+          <li>Dart</li>
+          -->
         </ul>
 
         <ul>
