Fix spacing in interests

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           <li>Woodworking</li>
           <li>Game Design</li>
           <li>Open-source Software</li>
+
+          <li class="strong">&nbsp;</li>
           <li>Data Transformation</li>
           <li>Keyboards</li>
           <li>Automation</li>
