Add libraries list

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
           <li>Git</li>
           <li>Shell</li>
 
+          <!-- most of these are intentionally vague because the skills translate well between various
+               "concrete" examples - ie, PostgreSQL vs SQL Server vs Oracle vs MySQL -->
           <!-- not great at SQL syntax, but I understand the concepts and have done plenty of DB work. -->
           <li>SQL</li>
           <li>NoSQL</li>
@@ -108,6 +110,18 @@
           <li>Redis</li>
           <li>Docker</li>
           <li>CI/CD</li>
+        </ul>
+
+        <ul>
+          <li class="strong">Libraries</li>
+
+          <li>Flask</li>
+          <li>Jinja2</li>
+          <li>Click</li>
+          <li>Pandas</li>
+          <li>SQLAlchemy</li>
+          <li>Matplotlib</li>
+          <li>Plotly</li>
         </ul>
       </div>
 
