Add mobile support

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="fonts.css" type="text/css"/>
     <link rel="stylesheet" href="main.css" type="text/css"/>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <!-- thank you for reading my source code, friend. -->
     <!-- I hope you find something valuable in here. -->
   </head>
@@ -27,13 +30,13 @@
       <h2><span>Education</span></h2>
       <div id="education">
         <div>
-          <span class="degree">M.S., Computer Science</span><span class="school">Binghamton University</span>
           <time>2017</time>
+          <span class="degree">M.S., Computer Science</span><span class="school">Binghamton University</span>
         </div>
 
         <div>
-          <span class="degree">B.S., Computer Science</span><span class="school">Binghamton University</span>
           <time>2015</time>
+          <span class="degree">B.S., Computer Science</span><span class="school">Binghamton University</span>
         </div>
       </div>
 
@@ -41,8 +44,8 @@
       <div id="employment">
         <div>
           <!-- technically this was "official" in 2020, but the work and roles date back to 2019 -->
-          <span class="title">Senior Software Engineer</span><span class="employer">Corning Incorporated</span>
           <time>2019 - present</time>
+          <span class="title">Senior Software Engineer</span><span class="employer">Corning Incorporated</span>
         </div>
 
         <span class="role">Project Architect</span><span class="project">Materials Informatics</span>
@@ -68,8 +71,8 @@
         </ul>
 
         <div>
-          <span class="title">Software Engineer</span><span class="employer">Corning Incorporated</span>
           <time>2017 - 2019</time>
+          <span class="title">Software Engineer</span><span class="employer">Corning Incorporated</span>
         </div>
 
         <ul>
@@ -79,8 +82,8 @@
         </ul>
 
         <div>
-          <span class="title">Software Engineering Intern</span><span class="employer">Corning Incorporated</span>
           <time>2016 - 2017</time>
+          <span class="title">Software Engineering Intern</span><span class="employer">Corning Incorporated</span>
         </div>
         <!-- everyone knows what interns do -->
 
@@ -88,16 +91,16 @@
 
         <!-- this was high school / undergrad work for a lot of small businesses -->
         <div>
-          <span class="title">Web Developer</span><span class="employer">Freelance</span>
           <time>2005 - present</time>
+          <span class="title">Web Developer</span><span class="employer">Freelance</span>
         </div>
       </div>
 
       <h2><span>Projects</span></h2>
       <div id="projects">
         <div>
-          <a href="https://github.com/xtfc/mold" class="petproject">Mold</a><span class="description">task runner</span><span class="print link">github.com/xtfc/mold</span>
           <time>2020</time>
+          <a href="https://github.com/xtfc/mold" class="petproject">Mold</a><span class="description">task runner</span><span class="print link">github.com/xtfc/mold</span>
         </div>
 
         <ul>
@@ -106,8 +109,8 @@
         </ul>
 
         <div>
-          <a href="https://github.com/scizzorz/milk" class="petproject">Milk</a><span class="description">Git porcelain</span><span class="print link">github.com/scizzorz/mold</span>
           <time>2019</time>
+          <a href="https://github.com/scizzorz/milk" class="petproject">Milk</a><span class="description">Git porcelain</span><span class="print link">github.com/scizzorz/mold</span>
         </div>
 
         <ul>
@@ -116,8 +119,8 @@
         </ul>
 
         <div>
-          <a href="https://github.com/scizzorz/mask" class="petproject">Mask</a><span class="description">programming language</span><span class="print link">github.com/scizzorz/mask</span>
           <time>2018</time>
+          <a href="https://github.com/scizzorz/mask" class="petproject">Mask</a><span class="description">programming language</span><span class="print link">github.com/scizzorz/mask</span>
         </div>
 
         <ul>
