--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <span class="role">Project Architect</span><span class="project">Materials Informatics</span>
         <ul>
-          <li>Pioneer development, architecture, tooling, and prototypes for a novel research operations platform</li>
+          <li>Pioneer the development, architecture, tooling, and prototypes of a novel research operations platform</li>
           <li>Devise and implement an innovative graph-based data system that allows for rapid, intuitive, and organic exploration of data and concepts</li>
           <!-- <li>Establish and enforce best practices across a small software development team</li> -->
         </ul>
