--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- this was high school / undergrad work for a lot of small businesses -->
         <div>
           <time>2005 - present</time>
-          <span class="title">Web Developer</span><span class="employer">Freelance</span>
+          <span class="title">Web Developer</span><span class="employer">freelance</span>
         </div>
       </div>
 
