Change phrasing slightly

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
 
         <ul>
-          <li>Delivered multiple internal web applications to accelerate research engineers</li>
+          <li>Delivered multiple internal web applications to accelerate research development</li>
           <li>Overhauled data pipelines for capturing and normalizing pilot manufacturing data with full traceability</li>
           <li>Led training sessions for technologies like Git, Python, Rust, Go, and Docker</li>
         </ul>
@@ -216,8 +216,8 @@
           <!-- you know, non-professional things. -->
           <li>Woodworking</li>
           <li>Game Design</li>
-          <li>Keyboards</li>
           <li>Electronics</li>
+          <li>Leatherworking</li>
         </ul>
 
       </div>
