--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <li>Woodworking</li>
           <li>Game Design</li>
           <li>Electronics</li>
-          <li>Leatherworking</li>
+          <li>Leathercraft</li>
         </ul>
 
       </div>
