End Corning and add Block

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
       <div id="employment">
         <div>
           <!-- technically this was "official" in 2020, but the work and roles date back to 2019 -->
-          <time>2019 - present</time>
+          <time>2021 - present</time>
+          <span class="title">Software Engineer</span><span class="employer">Block, Inc.</span>
+        </div>
+
+        <div>
+          <!-- technically this was "official" in 2020, but the work and roles date back to 2019 -->
+          <time>2019 - 2021</time>
           <span class="title">Senior Software Engineer</span><span class="employer">Corning Incorporated</span>
         </div>
 
