--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <h1 id="name">John Weachock</h1>
       <p id="contact">
-        <span id="address">317 East 3rd Street, Corning, NY 14830</span>
+        <span id="address">Corning, NY 14830</span>
         <br>
 
         <a id="email" href="jweachock@gmail.com">jweachock@gmail.com</a>
@@ -43,9 +43,9 @@
       <h2><span>Employment</span></h2>
       <div id="employment">
         <div>
-          <!-- technically this was "official" in 2020, but the work and roles date back to 2019 -->
+          <!-- technically Block doesn't use the term "senior" for any SWE's, but this is what it would be elsewhere -->
           <time>2021 - present</time>
-          <span class="title">Software Engineer</span><span class="employer">Block, Inc.</span>
+          <span class="title">Senior Software Engineer</span><span class="employer">Block, Inc.</span>
         </div>
 
         <div>
